--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node build/server.js",
     "build": "rm -rf build & tsc",
     "dev": "nodemon ./src/server.ts",
-    "test": "env-cmd -f ./dotenv/test.env jest --watchAll --runInBand"
+    "test": "env-cmd -f ./env/test.env jest --watchAll --runInBand"
   },
   "repository": {
     "type": "git",
@@ -21,23 +21,30 @@
   },
   "homepage": "https://github.com/imarthaid/assign4-backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
-    "ts-node-dev": "^1.1.6"
+    "ts-node-dev": "^1.1.6",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.1.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
