--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
+    "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.1.3",
     "jest": "^26.6.3",
+    "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
