--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "multer": "^1.4.2",
     "ts-node-dev": "^1.1.6",
     "validator": "^13.6.0"
   },
@@ -39,6 +40,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
+    "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.1.3",
