--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     },
     "lib": ["es2015"],
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "tests"]
+    "exclude": ["node_modules", "tests"],
+    "skipLibCheck": true
 }
