--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,11 @@
         "noImplicitThis": true,
         "strictNullChecks": true,
         "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true
     },
     "lib": ["es2015"],
     "include": ["src/**/*"],
     "exclude": ["node_modules", "tests"],
-    "skipLibCheck": true
+    
 }
