--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
+    "serve": "^12.0.0",
     "ts-node-dev": "^1.1.6",
     "validator": "^13.6.0"
   },
