--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.ts",
   "scripts": {
     "start": "node build/server.js",
+    "build": "rimraf dist && tsc",
     "dev": "nodemon ./src/server.ts",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "test": "env-cmd -f ./env/test.env jest --watchAll --runInBand"
   },
   "repository": {
@@ -47,6 +50,8 @@
     "@types/validator": "^13.1.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
@@ -55,5 +60,10 @@
   "engines": {
     "node": "14.17.0",
     "npm": "7.16.0"
-  }
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ]
 }
