--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assign4-backend",
+  "name": "be-point-of-sale",
   "version": "1.0.0",
   "description": "Ayu udah access Wellington juga",
   "main": "app.ts",
